Replace dumb unneeded TCP client with open process that we wrap stdin/stdout of. It turns out WatchService on Mac/Linux is unusable due to being based on polling.