@@ -1,6 +1,5 @@
 package org.wkh.arete;
 
-import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.file.*;
@@ -21,32 +20,21 @@ public class CodeEvaluationPOC {
 
         final Path codeDirectory = Files.createTempDirectory("code_eval");
         final Path tempCodePath = Files.createTempFile(codeDirectory, "arete", ".py");
-        final File tempCodeFile = tempCodePath.toFile();
+        final byte[] payload = (tempCodePath.toString() + "\n").getBytes();
 
-        System.out.println(tempCodePath);
-
+        /* this performs like shit on Mac/Linux due to Java not implementing native file watching */
         final WatchService watchService = FileSystems.getDefault().newWatchService();
         codeDirectory.register(watchService, StandardWatchEventKinds.ENTRY_MODIFY);
 
         WatchKey key;
 
-        final String editCmd = String.format("\"%s\" \"%s\" ", editorPath.toString(), tempCodePath.toString());
-
-        Runtime.getRuntime().exec(editCmd);
-        // warm up the client and the server
-        EvaluationClient.evaluatePath("warmup\n");
-
-        /* shitty hack to handle mostly two events getting fired but sometimes only one occurs when saving files */
-        long lastModified = 0;
+        final ProcessBuilder builder = new ProcessBuilder(editorPath.toString(), tempCodePath.toString());
+        builder.start();
+        EvaluationClient client = new EvaluationClient();
 
         while ((key = watchService.take()) != null) {
             for (WatchEvent<?> event : key.pollEvents()) {
-                long newLastModified = tempCodeFile.lastModified();
-
-                if (newLastModified > lastModified) {
-                    System.out.println(EvaluationClient.evaluatePath(tempCodePath.toString()));
-                    lastModified = newLastModified;
-                }
+                System.out.println(client.evaluatePath(payload));
             }
             key.reset();
         }
